{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 11,
  "lineage": "c488fa07-65af-498e-63a1-cad22d19b383",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devsecops_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:393897072130:instance/i-01b6ec03f81ca75b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b6ec03f81ca75b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devsecops-dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a822cfeb28860757",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-98-92-190-120.compute-1.amazonaws.com",
            "public_ip": "98.92.190.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "devsecops-root-volume"
                },
                "tags_all": {
                  "Name": "devsecops-root-volume"
                },
                "throughput": 125,
                "volume_id": "vol-0f9c33237d9a2e187",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc95363794bff521",
            "tags": {
              "Environment": "development",
              "Name": "devsecops-app-server"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devsecops-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e051ac3fbc6fb469"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vulnerable_sg",
            "aws_subnet.devsecops_subnet",
            "aws_vpc.devsecops_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devsecops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393897072130:internet-gateway/igw-084e8e3f850f9aecd",
            "id": "igw-084e8e3f850f9aecd",
            "owner_id": "393897072130",
            "tags": {
              "Environment": "development",
              "Name": "devsecops-igw"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devsecops-igw"
            },
            "vpc_id": "vpc-0e547c380feeca73a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devsecops_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393897072130:route-table/rtb-06376656a23e3c2de",
            "id": "rtb-06376656a23e3c2de",
            "owner_id": "393897072130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084e8e3f850f9aecd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "devsecops-route-table"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devsecops-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e547c380feeca73a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devsecops_igw",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devsecops_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f80037c4b801efe",
            "route_table_id": "rtb-06376656a23e3c2de",
            "subnet_id": "subnet-0fc95363794bff521"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.devsecops_igw",
            "aws_route_table.devsecops_rt",
            "aws_subnet.devsecops_subnet",
            "aws_vpc.devsecops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vulnerable_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393897072130:security-group/sg-0e051ac3fbc6fb469",
            "description": "Intentionally vulnerable security group for testing security scanners",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e051ac3fbc6fb469",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere - INTENTIONAL VULNERABILITY",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devsecops-vulnerable-sg",
            "name_prefix": "",
            "owner_id": "393897072130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "devsecops-vulnerable-sg",
              "Purpose": "Security Scanner Testing"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devsecops-vulnerable-sg",
              "Purpose": "Security Scanner Testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e547c380feeca73a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devsecops_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393897072130:subnet/subnet-0fc95363794bff521",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc95363794bff521",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "393897072130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "devsecops-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devsecops-subnet"
            },
            "vpc_id": "vpc-0e547c380feeca73a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.devsecops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devsecops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393897072130:vpc/vpc-0e547c380feeca73a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045871f290e5c234d",
            "default_route_table_id": "rtb-07104a93afb9b4cd7",
            "default_security_group_id": "sg-02b56bb7016d0cd03",
            "dhcp_options_id": "dopt-02ee07526c8395b86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e547c380feeca73a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07104a93afb9b4cd7",
            "owner_id": "393897072130",
            "tags": {
              "Environment": "development",
              "Name": "devsecops-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "devsecops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}